fix: :bug: Adjust z-index for sidenav-trigger to prevent popups from blocking view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4043,7 +4043,8 @@ nav a.sidenav-trigger i {
   /* Workaround to keep dots aligned and antarctica white */
   background: rgba(255, 255, 255, 0.85);
   color: white;
-  z-index: 10;
+  /* Don't let popups block the view */
+  z-index: 99999999;
   padding: 0;
 }
 
